compile_errors_v6.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0432]: unresolved import `crate::traits::HeartbeatConfig`
  --> src/actors/erinyes/heartbeat.rs:13:5
   |
13 | use crate::traits::HeartbeatConfig;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `HeartbeatConfig` in `traits`

error[E0407]: method `handle_command` is not a member of trait `OlympianActor`
   --> src/actors/hades/mod.rs:251:5
    |
251 | /     async fn handle_command(&mut self, cmd: CommandPayload) -> Result<ResponsePayload,...
252 | |         match cmd {
253 | |             CommandPayload::Custom(data) => {
254 | |                 if let Ok(hades_cmd) = serde_json::from_value::<HadesCommand>(data) {
...   |
268 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0407]: method `handle_query` is not a member of trait `OlympianActor`
   --> src/actors/hades/mod.rs:270:5
    |
270 | /     async fn handle_query(&self, query: QueryPayload) -> Result<ResponsePayload, Actor...
271 | |         match query {
272 | |             QueryPayload::GetStats => {
273 | |                 let encryption_stats = async {
...   |
343 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0407]: method `handle_event` is not a member of trait `OlympianActor`
   --> src/actors/hades/mod.rs:345:5
    |
345 | /     async fn handle_event(&mut self, _event: crate::traits::message::EventPayload) -> ...
346 | |         Ok(ResponsePayload::Ack { message_id: uuid::Uuid::new_v4().to_string() })
347 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0408]: variable `e` is not bound in all patterns
   --> src/actors/hestia/mod.rs:457:13
    |
457 |             Ok(_) | Err(e) => {
    |             ^^^^^       - variable not in all patterns
    |             |
    |             pattern doesn't bind `e`

error[E0425]: cannot find value `circuit_breaker` in this scope
   --> src/actors/erinyes/recovery.rs:294:18
    |
294 |         let cb = circuit_breaker.read().await;
    |                  ^^^^^^^^^^^^^^^
